Ver 07-11-2018. Работает менюи корректировка параметров

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,8 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_extra_dirs = c:/users/Gleb2/Desktop/Arduino/Projects/MyLed_Aqua/src
+
+
+monitor_port = COM7
+
+monitor_speed = 115200 ;57600
