--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,11 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_extra_dirs = c:/users/Gleb2/Desktop/Arduino/Projects/MyLed_Aqua/src
+lib_extra_dirs = c:/users/Gleb2/Desktop/Hobby/Arduino/Projects/MyLed_Aqua/src
 
 
-monitor_port = COM6
+monitor_port = COM4
+;6
 
-monitor_speed = 115200 ;57600
+monitor_speed = 115200
+; 115200 ;57600 ;  ;9600
